# project-hourglass

./: .gitignore  CMakeLists.txt  README.md
models/: hourglass.glb
src/: main.cpp
